--- a/classcc__tools__qt_1_1ToolsSocket.html
+++ b/classcc__tools__qt_1_1ToolsSocket.html
@@ -648,8 +648,7 @@ static unsigned long long&#160;</td><td class="memItemRight" valign="bottom"><b>
 <p>Signal used to report error. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramdir">[in]</td><td class="paramname">msg</td><td>Error message. <br  />
- </td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">msg</td><td>Error message. </td></tr>
   </table>
   </dd>
 </dl>
