--- a/classcc__tools__qt_1_1ToolsPlugin.html
+++ b/classcc__tools__qt_1_1ToolsPlugin.html
@@ -366,8 +366,7 @@ Protected Member Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Create filter object. </p>
-<p>Expected to be overriden by the derived class. </p><dl class="section return"><dt>Returns</dt><dd>By default returns empty pointer. <br  />
- </dd></dl>
+<p>Expected to be overriden by the derived class. </p><dl class="section return"><dt>Returns</dt><dd>By default returns empty pointer. </dd></dl>
 
 </div>
 </div>
@@ -464,8 +463,7 @@ Protected Member Functions</h2></td></tr>
 </div><div class="memdoc">
 
 <p>Create protocol object. </p>
-<p>Expected to be overriden by the derived class. </p><dl class="section return"><dt>Returns</dt><dd>By default returns empty pointer. <br  />
- </dd></dl>
+<p>Expected to be overriden by the derived class. </p><dl class="section return"><dt>Returns</dt><dd>By default returns empty pointer. </dd></dl>
 
 </div>
 </div>
