--- a/classcc__tools__qt_1_1ToolsProtocol.html
+++ b/classcc__tools__qt_1_1ToolsProtocol.html
@@ -820,8 +820,7 @@ static void&#160;</td><td class="memItemRight" valign="bottom"><b>setTransportTo
 <p>Signal to report inter-plugin configuration. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramdir">[in]</td><td class="paramname">props</td><td>Configuration properties. <br  />
- </td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">props</td><td>Configuration properties. </td></tr>
   </table>
   </dd>
 </dl>
